<resources>
    <string name="app_name">CoronaTracker</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_news">News</string>
    <string name="confirmed">Confirmed</string>
    <string name="cured">Cured</string>
    <string name="dead">Deceased</string>
    <string name="suspected">Suspected</string>
    <string name="mortality_rate">Mortality Rate : </string>
    <string name="lastupdate">Latest update</string>
    <string name="corona_tracker">Corona Tracker</string>
    <string name="title_stats">Stats</string>
    <string name="menu_share_app_link">https://1drv.ms/u/s!Avd5iVsATqWEhzw3qS7brsHnl9IC?e=kOppIh</string>
    <string name="menu_search">Search</string>
    <string name="label_total_confirmed">Total Confirmed</string>
    <string name="label_total_deaths">Total Deaths</string>
    <string name="label_total_recovered">Total Recovered</string>
    <string name="label_last_update_date">Updated on %s</string>
    <string name="precautions">Precautions</string>
    <string name="helpline">Helpline</string>
    <string name="justnow">just now</string>
    <string name="aminuteago">a minute ago</string>
    <string name="xminutesago">%1$s minutes ago</string>
    <string name="anhourago">an hour ago</string>
    <string name="xhoursago">%1$s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="xdaysago">%1$s days ago</string>
    <string name="learn_more_about_covid_19">Learn More about COVID 19</string>
    <string name="covid_19_do_s_amp_don_ts"><![CDATA[COVID 19 Do\'s & Don\'ts]]></string>
    <string name="helplines_given">You can also reach out for help using following Social Media\'s</string>
    <string name="illness">If you feel unwell, have some of the symptoms, and need help please try to reach out to the Central Helpline Number for corona-virus: </string>
    <string name="helpline_no">Call on +91-11-23978046</string>
    <string name="helpline_message">Message on 1075</string>
    <string name="help_mental_health">Mental Health Helpline \n NGOs</string>
    <string name="lockdown">Lockdown 2.0 Guidelines</string>
    <string name="active_cases">Active Cases</string>
    <string name="who">WHO Myth Busters</string>
    <string name="myth4">5G mobile networks DO NOT spread COVID-19.</string>
    <string name="myth3">COVID-19 virus can be transmitted in areas with hot and humid climates.</string>
    <string name="myth2">Drinking alcohol does not protect you against COVID-19 and can be dangerous.</string>
    <string name="myth1">Exposing yourself to the sun or to temperatures higher than 25C degrees DOES NOT prevent the coronavirus disease (COVID-19).</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rumours">Rumours</string>
    <string name="new_cases">New Cases</string>

    <string name="message_splash">Global Data on the COVID-19 (Corona Virus) Pandemic</string>
    <string name="message_dont_panic">#StayHomeSaveLife</string>
    <string name="helpline_numbers_n_state_amp_district_wise"><![CDATA[Helpline Numbers \n State & District Wise]]></string>
    <string name="todo">TODO</string>
</resources>
