<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelBlue"
    android:paddingTop="0dp">

    <include
        android:id="@+id/home_main_toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

    <LinearLayout
        android:id="@+id/charts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.bhavishay.coronatracker.charts.SummaryPieChart
            android:id="@+id/summary_pie_chart"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_weight="1" >

        </com.bhavishay.coronatracker.charts.SummaryPieChart>

        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_confirmed"
                    android:textColor="@color/pastelRed"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/pastelRed"
                        android:textSize="36sp"
                        tools:text="1,776,157" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_total_deaths"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="16sp" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                        android:visibility="invisible"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="32sp"
                        tools:text="108,804" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_total_recovered"
                    android:textColor="@color/colorTextPrimaryGreen"
                    android:textSize="18sp" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                        android:visibility="invisible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorTextPrimaryGreen"
                        android:textSize="36sp"
                        tools:text="402,903" />

                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mortality_rate"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charts" />

    <TextView
        android:id="@+id/tv_mortality_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_update_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/charts"
        tools:text="5%" />

    <TextView
        android:id="@+id/tv_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/charts"
        tools:text="Updated on 12/04/2020" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:elevation="1dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/precautions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Helpline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:elevation="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@null"
            android:text="@string/helpline"
            android:layout_weight="1"
            android:translationZ="2dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonColor"
            app:cornerRadius="8dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pastelBlue"
        app:itemIconTint="@drawable/bottom_nav_menu_selector"
        app:itemTextColor="@drawable/bottom_nav_menu_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>