<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pastelBlue"
    android:paddingBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/charts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.bhavishay.coronatracker.charts.SummaryPieChart
            android:id="@+id/summary_pie_chart"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_weight="1">

        </com.bhavishay.coronatracker.charts.SummaryPieChart>

        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total_confirmed"
                android:textColor="@color/pastelOrange"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/text_confirmed_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/pastelOrange"
                    android:textSize="30sp"
                    tools:text="1,776,157" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_total_deaths"
                android:textColor="@color/pastelRed"
                android:textSize="16sp" />


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/text_deceased_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/pastelRed"
                    android:textSize="30sp"
                    tools:text="108,804" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_total_recovered"
                android:textColor="@color/pastelGreen"
                android:textSize="16sp" />


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress_bar_circular_grey_small"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/text_recovered_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/pastelGreen"
                    android:textSize="30sp"
                    tools:text="402,903" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/charts"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mortality_rate"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_mortality_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/charts"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"

        tools:text="5%" />

    <TextView
        android:id="@+id/tv_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/charts"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp"
        tools:text="Updated on 12/04/2020" />





</RelativeLayout>